--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,7 +69,7 @@ def enableProguardInReleaseBuilds = false
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion '26.1.10909125'
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -82,6 +82,14 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                            storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+                        }
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -96,7 +104,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
