--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.2",
+    "@types/crypto-js": "^4.2.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-asset": "^2.1.1",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
@@ -34,6 +39,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
