--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-native": "0.72.7",
     "react-native-asset": "^2.1.1",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
